feat: fixes no UserService e AuthController, criação de Controller, Service, Rule de validação e Requests relacionados a Associados (Associate). Documentação via Swagger com referenciamento de Schemas para manter o código limpo
