# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AssociateController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
 
@@ -12,5 +13,14 @@ Route::prefix('auth')->group(function () {
     Route::middleware('jwt')->group(function () {
         Route::get('/user', [AuthController::class, 'getUser']);
         Route::post('/logout', [AuthController::class, 'logout']);
+    });
+});
+
+Route::prefix('associates')->group(function () {
+    Route::middleware('jwt')->group(function () {
+        Route::post('/', [AssociateController::class, 'createAssociate']);
+        Route::get('/', [AssociateController::class, 'getAssociates']);
+        Route::put('/{id}', [AssociateController::class, 'updateAssociate']);
+        Route::delete('/{id}', [AssociateController::class, 'deleteAssociate']);
     });
 });
